Fixed the issue